WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165286
SourceCodeKey should use unlinked source code
https://bugs.webkit.org/show_bug.cgi?id=165286
Summary
SourceCodeKey should use unlinked source code
Geoffrey Garen
Reported
2016-12-01 16:04:47 PST
CodeCacheKey should use unlinked source code
Attachments
Patch
(36.37 KB, patch)
2016-12-01 16:17 PST
,
Geoffrey Garen
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-12-01 16:17:35 PST
Created
attachment 295910
[details]
Patch
WebKit Commit Bot
Comment 2
2016-12-01 16:19:05 PST
Attachment 295910
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/parser/UnlinkedSourceCode.h:36: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/JavaScriptCore/parser/SourceCode.h:35: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2016-12-01 16:20:57 PST
Comment on
attachment 295910
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295910&action=review
r=me with some comments
> Source/JavaScriptCore/ChangeLog:3 > + CodeCacheKey should use unlinked source code
Do you mean SourceCodeKey?
> Source/JavaScriptCore/ChangeLog:15 > + I plan to deploy UnlinkedSourceCode in more places, to indicate code > + that has no absolute location.
Nice
> Source/JavaScriptCore/parser/UnlinkedSourceCode.cpp:2 > + * Copyright (C) 2013 Apple Inc. All rights reserved.
should be 2016
> Source/JavaScriptCore/parser/UnlinkedSourceCode.h:2 > + * Copyright (C) 2008, 2013 Apple Inc. All rights reserved.
should be 2016
> Source/JavaScriptCore/parser/UnlinkedSourceCode.h:15 > + * 1. Redistributions of source code must retain the above copyright > + * notice, this list of conditions and the following disclaimer. > + * 2. Redistributions in binary form must reproduce the above copyright > + * notice, this list of conditions and the following disclaimer in the > + * documentation and/or other materials provided with the distribution. > + * 3. Neither the name of Apple Inc. ("Apple") nor the names of > + * its contributors may be used to endorse or promote products derived > + * from this software without specific prior written permission.
Looks like the wrong license
Geoffrey Garen
Comment 4
2016-12-01 16:24:38 PST
Committed
r209220
: <
http://trac.webkit.org/changeset/209220
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug